--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
