--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "debounce": "^1.2.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
