--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
     "axios": "^0.27.2",
-    "chart.js": "^3.9.1",
+    "chart.js": "2.9",
     "core-js": "^3.8.3",
     "debounce": "^1.2.1",
+    "echarts": "^4.9.0",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.1",
+    "vue-chartkick": "^0.6.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
