--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "v-charts": "^1.19.0",
     "vue": "^2.6.14",
     "vue-chartkick": "^0.6.1",
+    "vue-clipboard2": "^0.3.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
